# sip-intercom-device-simulator

./: .gitignore  CMakeLists.txt  README.md
configs/: app_config.json
docs/: app_skeleton_architecture_decisions.md  architecture_overview.md  mvp_plan.md  project_vision.md  requirements.md  risks_and_spikes.md  spike_logging_format.md  spike_sip_call_flow.md  spike_sip_parser_boundaries.md  spike_state_machine.md  spike_threading_model.md  system_scope.md  use_cases.md
include/app/: Application.hpp
include/config/: AppConfig.hpp  ConfigLoader.hpp
include/logging/: Logger.hpp
src/: main.cpp
src/app/: Application.cpp
src/config/: ConfigLoader.cpp
src/logging/: Logger.cpp
